--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       context: frontend
       dockerfile: Dockerfile
     image: frontend-image
+    env_file:
+      - ./frontend/.env
     ports:
       - 8080:80
 
